# LightSetup

./: CMakeLists.txt  README.md  ls_setup.cmake
include/lightsky/setup/: Api.h  Arch.h  CPU.h  Compiler.h  Macros.h  OS.h  Setup.h  Types.h  api.h  compiler.h  setup.h
src/: Setup.cpp
src/setup/: Setup.cpp
tests/: CMakeLists.txt  lssetup_cpu_timer_test.cpp  lssetup_types_test.cpp
